--- a/src/main/resources/assets/oppamod/lang/en_us.json
+++ b/src/main/resources/assets/oppamod/lang/en_us.json
@@ -4,13 +4,14 @@
   "item.oppamod.summon_eye": "Suspicious Looking Eye",
   "item.oppamod.water_leaf": "Water leaf",
   "item.oppamod.water_leaf_seed": "Water leaf Seed",
+  "item.oppamod.platinum_bar": "Platinum Bar",
 
   "block.oppamod.crimson_altar": "Crimson Altar",
   "block.oppamod.demonic_altar": "Demonic Altar",
-  "block.oppamod.t_super_block": "Super Block",
   "block.oppamod.t_lamp_block": "Lamp Block",
   "block.oppamod.water_leaf_block": "Water Leaf",
-
+  "block.oppamod.platinum_ore": "Platinum Ore",
+  "block.oppamod.platinum_block": "Platinum Block",
   "entity.minecraft.villager.t_super_villager": "Super Villager",
 
   "itemGroup.oppamodtab": "Terraria"
