--- a/src/main/resources/assets/oppamod/lang/en_us.json
+++ b/src/main/resources/assets/oppamod/lang/en_us.json
@@ -6,6 +6,7 @@
   "item.oppamod.water_leaf_seed": "Water leaf Seed",
   "item.oppamod.platinum_bar": "Platinum Bar",
   "item.oppamod.mana_crystal": "Mana Crystal",
+  "item.oppamod.magic_wand": "Magic Wand",
 
   "block.oppamod.crimson_altar": "Crimson Altar",
   "block.oppamod.demonic_altar": "Demonic Altar",
