--- a/src/main/resources/assets/oppamod/lang/ru_ru.json
+++ b/src/main/resources/assets/oppamod/lang/ru_ru.json
@@ -6,6 +6,7 @@
   "item.oppamod.water_leaf_seed": "Семя воднолиста",
   "item.oppamod.platinum_bar": "Платиновый слиток",
   "item.oppamod.mana_crystal": "Кристал Маны",
+  "item.oppamod.magic_wand": "Магическая Палочка",
 
   "block.oppamod.crimson_altar": "Багряный алтарь",
   "block.oppamod.demonic_altar": "Демонический алтарь",
