ads Sample Cane

--- a/src/main/resources/assets/oppamod/lang/en_us.json
+++ b/src/main/resources/assets/oppamod/lang/en_us.json
@@ -6,7 +6,9 @@
   "item.oppamod.water_leaf_seed": "Water leaf Seed",
   "item.oppamod.platinum_bar": "Platinum Bar",
   "item.oppamod.mana_crystal": "Mana Crystal",
-  "item.oppamod.fireball_cane": "Magic Wand",
+  "item.oppamod.fireball_cane": "Fireball Cane",
+  "item.oppamod.sample_cane": "Sample Cane",
+
 
   "block.oppamod.crimson_altar": "Crimson Altar",
   "block.oppamod.demonic_altar": "Demonic Altar",
