--- a/src/main/resources/assets/oppamod/lang/ru_ru.json
+++ b/src/main/resources/assets/oppamod/lang/ru_ru.json
@@ -6,7 +6,8 @@
   "item.oppamod.water_leaf_seed": "Семя воднолиста",
   "item.oppamod.platinum_bar": "Платиновый слиток",
   "item.oppamod.mana_crystal": "Кристал Маны",
-  "item.oppamod.fireball_cane": "Магическая Палочка",
+  "item.oppamod.fireball_cane": "Посох Огненного Шара",
+  "item.oppamod.sample_cane": "Макет Посоха",
 
   "block.oppamod.crimson_altar": "Багряный алтарь",
   "block.oppamod.demonic_altar": "Демонический алтарь",
