--- a/src/main/resources/assets/oppamod/lang/ru_ru.json
+++ b/src/main/resources/assets/oppamod/lang/ru_ru.json
@@ -9,13 +9,12 @@
   "item.oppamod.fireball_cane": "Посох Огненного Шара",
   "item.oppamod.sample_cane": "Макет Посоха",
 
-  "block.oppamod.crimson_altar": "Багряный алтарь",
-  "block.oppamod.demonic_altar": "Демонический алтарь",
   "block.oppamod.water_leaf_block": "Воднолист",
   "block.oppamod.t_lamp_block": "Блок лампа",
   "block.oppamod.platinum_ore": "Платиновая руда",
   "block.oppamod.platinum_block": "Платиновый блок",
   "entity.minecraft.villager.t_super_villager": "Супер житель",
+  "block.oppamod.alterionating_table": "Альтерио Стол",
 
   "itemGroup.oppamodtab": "Террария",
 
