--- a/src/main/resources/assets/oppamod/lang/ru_ru.json
+++ b/src/main/resources/assets/oppamod/lang/ru_ru.json
@@ -14,7 +14,7 @@
   "block.oppamod.platinum_ore": "Платиновая руда",
   "block.oppamod.platinum_block": "Платиновый блок",
   "entity.minecraft.villager.t_super_villager": "Супер житель",
-  "block.oppamod.alterionating_table": "Альтерио Стол",
+  "block.oppamod.alterio_table": "Альтерио Стол",
 
   "itemGroup.oppamodtab": "Террария",
 
