--- a/src/main/resources/assets/oppamod/lang/en_us.json
+++ b/src/main/resources/assets/oppamod/lang/en_us.json
@@ -14,7 +14,7 @@
   "block.oppamod.water_leaf_block": "Water Leaf",
   "block.oppamod.platinum_ore": "Platinum Ore",
   "block.oppamod.platinum_block": "Platinum Block",
-  "block.oppamod.alterionating_table": "Alterio Table",
+  "block.oppamod.alterio_table": "Alterio Table",
 
 
   "entity.minecraft.villager.t_super_villager": "Super Villager",
