--- a/src/main/resources/assets/oppamod/lang/en_us.json
+++ b/src/main/resources/assets/oppamod/lang/en_us.json
@@ -7,6 +7,7 @@
   "item.oppamod.mana_crystal": "Mana Crystal",
   "item.oppamod.fallen_star": "Fallen Star",
   "item.oppamod.fireball_cane": "Fireball Cane",
+  "item.oppamod.lightning_cane": "Lightning Cane",
   "item.oppamod.sample_cane": "Sample Cane",
 
 
