--- a/src/main/resources/assets/oppamod/lang/ru_ru.json
+++ b/src/main/resources/assets/oppamod/lang/ru_ru.json
@@ -7,6 +7,7 @@
   "item.oppamod.mana_crystal": "Кристал Маны",
   "item.oppamod.fallen_star": "Упавшая Звезда",
   "item.oppamod.fireball_cane": "Посох Огненного Шара",
+  "item.oppamod.lightning_cane": "Громовержец",
   "item.oppamod.sample_cane": "Макет Посоха",
 
   "block.oppamod.water_leaf_block": "Воднолист",
