--- a/src/main/resources/assets/oppamod/lang/en_us.json
+++ b/src/main/resources/assets/oppamod/lang/en_us.json
@@ -4,10 +4,11 @@
   "item.oppamod.water_leaf": "Water leaf",
   "item.oppamod.water_leaf_seed": "Water leaf Seed",
   "item.oppamod.platinum_bar": "Platinum Bar",
+  "item.oppamod.charged_copper_ingot": "Charged Copper Ingot",
   "item.oppamod.mana_crystal": "Mana Crystal",
   "item.oppamod.fallen_star": "Fallen Star",
   "item.oppamod.fireball_cane": "Fireball Cane",
-  "item.oppamod.lightning_cane": "Lightning Cane",
+  "item.oppamod.lightning_cane": "Lightning Turret",
   "item.oppamod.sample_cane": "Sample Cane",
 
 
@@ -19,12 +20,12 @@
 
   "entity.minecraft.villager.t_super_villager": "Super Villager",
 
-  "itemGroup.oppamodtab": "Terraria",
+  "itemGroup.oppamodtab": "Canes",
 
   "message.oppamod.mana_use": "You can get mana",
   "message.oppamod.mana_no_use": "You can not get mana",
 
-  "key.category.oppamod.oppaterra": "OppaTerraMod",
+  "key.category.oppamod.oppaterra": "ModCanes",
   "key.oppamod.mana_use": "Mana Use",
   "key.oppamod.open_gui": "Open Screen"
 }
