--- a/src/main/resources/assets/oppamod/lang/ru_ru.json
+++ b/src/main/resources/assets/oppamod/lang/ru_ru.json
@@ -7,10 +7,13 @@
   "item.oppamod.charged_copper_ingot": "Заряженный Медный слиток",
   "item.oppamod.mana_crystal": "Кристал Маны",
   "item.oppamod.fallen_star": "Упавшая Звезда",
+
+
   "item.oppamod.fireball_cane": "Посох Огненного Шара",
   "item.oppamod.lightning_cane": "Турель Молний",
   "item.oppamod.heal_cane": "Лечебный Посох",
   "item.oppamod.sample_cane": "Макет Посоха",
+  "item.oppamod.beam_cane": "Лученосец",
 
   "block.oppamod.water_leaf_block": "Воднолист",
   "block.oppamod.platinum_ore": "Платиновая руда",
