Update new Cane(not end version)

--- a/src/main/resources/assets/canes/lang/en_us.json
+++ b/src/main/resources/assets/canes/lang/en_us.json
@@ -14,6 +14,7 @@
   "item.canes.heal_cane": "Heal Turret",
   "item.canes.sample_cane": "Sample Cane",
   "item.canes.beam_cane": "The Raybearer",
+  "item.canes.rain_of_charges": "Rain Of Charges",
 
 
   "block.canes.water_leaf_block": "Water Leaf",
