--- a/src/main/resources/assets/canes/lang/ru_ru.json
+++ b/src/main/resources/assets/canes/lang/ru_ru.json
@@ -15,6 +15,8 @@
   "item.canes.heal_cane": "Лечебный Посох",
   "item.canes.sample_cane": "Макет Посоха",
   "item.canes.beam_cane": "Лученосец",
+  "item.canes.rain_of_charges": "Рейнофчар",
+
 
   "block.canes.water_leaf_block": "Воднолист",
   "block.canes.platinum_ore": "Платиновая руда",
