--- a/src/main/resources/assets/canes/lang/en_us.json
+++ b/src/main/resources/assets/canes/lang/en_us.json
@@ -35,7 +35,8 @@
 
   "screen.description": "Description",
 
-  "screen.description.1_fireball_cane": "The Staff of Ancient Embers. Its core \n pulses with a primordial spark, turning\nthe wielder's will into searing judgment.",
-  "screen.description.2_fireball_cane": "Its core pulses with a primordial spark,",
-  "screen.description.3_fireball_cane": "turning the wielder's will into searing judgment."
+  "screen.power": "power",
+  "screen.heal": "healing",
+  "screen.radius": "blast radius",
+  "screen.amt": "amt of charges"
 }
